--- a/index.html
+++ b/index.html
@@ -12,63 +12,60 @@
 <body>
 
     <main class="main-container">
-        <div class="frame">
-            <!-- <img src="./assets/img/lococop_Mostima.png" alt=""> -->
-            <!-- <div class="cover"></div> -->
-            <div class="banner">
+        <div class="image-container">
+            <div class="title-wrapper">
                 <img src="./assets/img/logo_Mostima_white.svg" alt="">
                 <p>MOSTIMA</p>
             </div>
         </div>
 
-        <div class="forms">
-            <div class="text-container">
-                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <i>now</i> to get started</p>
-            </div>
+        <div class="form-container">
+            <p class="form-heading">This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <i>now</i> to get started</p>
+            <p class="form-heading end-heading">You know what you want to.</p>
 
-            <div class="form-container">
-                <p>Let's do this!</p>
-
-                <form action="" method="post">
-                    <div>
-                        <label for="first-name">First name</label>
-                        <input type="text" name="user-firstname" id="first-name">
+            <h3>Let's do this</h3>
+            <form action="#" method="post">
+                <div class="form-wrapper">
+                    <div class="left-field">
+                        <div class="input-container">
+                            <label for="first-name">Firstname</label>
+                            <input type="text" name="user_fname" id="first-name">
+                        </div>
+                        <div class="input-container">
+                            <label for="mail">Email</label>
+                            <input type="email" name="user_email" id="mail">
+                        </div>
+                        <div class="input-container">
+                            <label for="password">Password</label>
+                            <input type="password" name="user_password" id="password">
+                        </div>
                     </div>
 
-                    <div>
-                        <label for="last-name">Last name</label>
-                        <input type="text" name="user-lastname" id="last-name">
+                    <div class="right-field">
+                        <div class="input-container">
+                            <label for="last-name">Lastname</label>
+                            <input type="text" name="user_lname" id="last-name">
+                        </div>
+                        <div class="input-container">
+                            <label for="tel-number">Telephone number</label>
+                            <input type="tel" name="user_tel" id="tel-number">
+                        </div>
+                        <div class="input-container">
+                            <label for="conf-password">Confirm password</label>
+                            <input type="password" name="conf_password" id="conf-password">
+                        </div>
                     </div>
+                </div>
+                <div class="button-wrapper">
+                    <button type="submit">Create account</button>
+                </div>
+            </form>
 
-                    <div>
-                        <label for="mail">Email</label>
-                        <input type="email" name="user-email" id="mail">
-                    </div>
-
-                    <div>
-                        <label for="phone-number">Phone number</label>
-                        <input type="tel" name="user-phonenumber" id="phone-number">
-                    </div>
-
-                    <div>
-                        <label for="password">Password</label>
-                        <input type="password" name="user-password" id="password">
-                    </div>
-
-                    <div>
-                        <label for="conf-password">Confirm password</label>
-                        <input type="password" name="user-confpassword" id="conf-password">
-                    </div>
-
-                    <div>
-                        <button type="submit">Create account</button>
-                    </div>
-                </form>
-            </div>
             <div class="login-hyperlink">
                 Already have an account? <a href="#">Log in</a>
             </div>
         </div>
+        
     </main>
 
 </body>
