--- a/index.html
+++ b/index.html
@@ -26,31 +26,37 @@
             <h3>Let's do this</h3>
             <form action="#" method="post">
                 <div class="form-wrapper">
-                    <div class="left-field">
-                        <div class="input-container">
+                    <div class="form-row first-row">
+                        <div class="input-wrapper">
                             <label for="first-name">Firstname</label>
                             <input type="text" name="user_fname" id="first-name">
                         </div>
-                        <div class="input-container">
-                            <label for="mail">Email</label>
-                            <input type="email" name="user_email" id="mail">
-                        </div>
-                        <div class="input-container">
-                            <label for="password">Password</label>
-                            <input type="password" name="user_password" id="password">
-                        </div>
-                    </div>
 
-                    <div class="right-field">
-                        <div class="input-container">
+                        <div class="input-wrapper">
                             <label for="last-name">Lastname</label>
                             <input type="text" name="user_lname" id="last-name">
                         </div>
-                        <div class="input-container">
+                    </div>
+
+                    <div class="form-row second-row">
+                        <div class="input-wrapper">
+                            <label for="mail">Email</label>
+                            <input type="email" name="user_email" id="mail">
+                        </div>
+
+                        <div class="input-wrapper">
                             <label for="tel-number">Telephone number</label>
                             <input type="tel" name="user_tel" id="tel-number">
                         </div>
-                        <div class="input-container">
+                    </div>
+
+                    <div class="form-row third-row">
+                        <div class="input-wrapper">
+                            <label for="password">Password</label>
+                            <input type="password" name="user_password" id="password">
+                        </div>
+
+                        <div class="input-wrapper">
                             <label for="conf-password">Confirm password</label>
                             <input type="password" name="conf_password" id="conf-password">
                         </div>
