95% complete from initial design

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <img src="./assets/img/logo_Mostima_white.svg" alt="">
                 <p>MOSTIMA</p>
             </div>
+            <!-- <div class="source-wrapper">
+                <p>Art drawn by <a href="https://www.pixiv.net/en/users/12342223">Lococo:p</a> on <a href="https://www.pixiv.net/en/">Pixiv</a></p>
+            </div> -->
         </div>
 
         <div class="form-container">
