ig done for now. Other functionality such validation using js later

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
 
                         <div class="input-wrapper">
-                            <label for="tel-number">Telephone number</label>
+                            <label for="tel-number">Phone number</label>
                             <input type="tel" name="user_tel" id="tel-number">
                         </div>
                     </div>
@@ -56,12 +56,12 @@
                     <div class="form-row third-row">
                         <div class="input-wrapper">
                             <label for="password">Password</label>
-                            <input type="password" name="user_password" id="password">
+                            <input type="password" name="user_password" id="password" class="error">
                         </div>
 
                         <div class="input-wrapper">
                             <label for="conf-password">Confirm password</label>
-                            <input type="password" name="conf_password" id="conf-password">
+                            <input type="password" name="conf_password" id="conf-password" class="error">
                         </div>
                     </div>
                 </div>
